cmake_minimum_required(VERSION 3.9)
project(LeetCode)
set(CMAKE_CXX_STANDARD 11)
#把exe文件输出到bin目录，不然太多了看着麻烦
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")

#链接库
aux_source_directory(leetcode/editor/cn/include LEETCODE)
add_library(leetcode ${LEETCODE})
LINK_LIBRARIES(leetcode)


add_executable(1-two-sum leetcode/editor/cn/1-two-sum.cpp)
add_executable(100-same-tree leetcode/editor/cn/100-same-tree.cpp)
add_executable(35-search-insert-position leetcode/editor/cn/35-search-insert-position.cpp)
add_executable(074-SsGoHC "leetcode/editor/cn/074-SsGoHC.cpp")
add_executable(485-max-consecutive-ones leetcode/editor/cn/485-max-consecutive-ones.cpp)
add_executable(495-teemo-attacking leetcode/editor/cn/495-teemo-attacking.cpp)
add_executable(414-third-maximum-number leetcode/editor/cn/414-third-maximum-number.cpp)
add_executable(628-maximum-product-of-three-numbers leetcode/editor/cn/628-maximum-product-of-three-numbers.cpp)
add_executable(645-set-mismatch leetcode/editor/cn/645-set-mismatch.cpp)
add_executable(697-degree-of-an-array leetcode/editor/cn/697-degree-of-an-array.cpp)
add_executable(448-find-all-numbers-disappeared-in-an-array leetcode/editor/cn/448-find-all-numbers-disappeared-in-an-array.cpp)
add_executable(912-sort-an-array leetcode/editor/cn/912-sort-an-array.cpp)
add_executable(442-find-all-duplicates-in-an-array leetcode/editor/cn/442-find-all-duplicates-in-an-array.cpp)
add_executable(989-add-to-array-form-of-integer leetcode/editor/cn/989-add-to-array-form-of-integer.cpp)
add_executable(274-h-index leetcode/editor/cn/274-h-index.cpp)
add_executable(453-minimum-moves-to-equal-array-elements leetcode/editor/cn/453-minimum-moves-to-equal-array-elements.cpp)
add_executable(283-move-zeroes leetcode/editor/cn/283-move-zeroes.cpp)
add_executable(118-pascals-triangle leetcode/editor/cn/118-pascals-triangle.cpp)
add_executable(119-pascals-triangle-ii leetcode/editor/cn/119-pascals-triangle-ii.cpp)
add_executable(661-image-smoother leetcode/editor/cn/661-image-smoother.cpp)
add_executable(598-range-addition-ii leetcode/editor/cn/598-range-addition-ii.cpp)
add_executable(419-battleships-in-a-board leetcode/editor/cn/419-battleships-in-a-board.cpp)
add_executable(189-rotate-array leetcode/editor/cn/189-rotate-array.cpp)
add_executable(396-rotate-function leetcode/editor/cn/396-rotate-function.cpp)
add_executable(54-spiral-matrix leetcode/editor/cn/54-spiral-matrix.cpp)
add_executable(59-spiral-matrix-ii leetcode/editor/cn/59-spiral-matrix-ii.cpp)
add_executable(498-diagonal-traverse leetcode/editor/cn/498-diagonal-traverse.cpp)
add_executable(566-reshape-the-matrix leetcode/editor/cn/566-reshape-the-matrix.cpp)
add_executable(48-rotate-image leetcode/editor/cn/48-rotate-image.cpp)
add_executable(73-set-matrix-zeroes leetcode/editor/cn/73-set-matrix-zeroes.cpp)
add_executable(303-range-sum-query-immutable leetcode/editor/cn/303-range-sum-query-immutable.cpp)
add_executable(304-range-sum-query-2d-immutable leetcode/editor/cn/304-range-sum-query-2d-immutable.cpp)
add_executable(238-product-of-array-except-self leetcode/editor/cn/238-product-of-array-except-self.cpp)
add_executable(520-detect-capital leetcode/editor/cn/520-detect-capital.cpp)
add_executable(125-valid-palindrome leetcode/editor/cn/125-valid-palindrome.cpp)
add_executable(14-longest-common-prefix leetcode/editor/cn/14-longest-common-prefix.cpp)
add_executable(434-number-of-segments-in-a-string leetcode/editor/cn/434-number-of-segments-in-a-string.cpp)
add_executable(58-length-of-last-word leetcode/editor/cn/58-length-of-last-word.cpp)
add_executable(344-reverse-string leetcode/editor/cn/344-reverse-string.cpp)
add_executable(541-reverse-string-ii leetcode/editor/cn/541-reverse-string-ii.cpp)
add_executable(557-reverse-words-in-a-string-iii leetcode/editor/cn/557-reverse-words-in-a-string-iii.cpp)
add_executable(151-reverse-words-in-a-string leetcode/editor/cn/151-reverse-words-in-a-string.cpp)
add_executable(387-first-unique-character-in-a-string leetcode/editor/cn/387-first-unique-character-in-a-string.cpp)
add_executable(389-find-the-difference leetcode/editor/cn/389-find-the-difference.cpp)
add_executable(383-ransom-note leetcode/editor/cn/383-ransom-note.cpp)
add_executable(242-valid-anagram leetcode/editor/cn/242-valid-anagram.cpp)
add_executable(49-group-anagrams leetcode/editor/cn/49-group-anagrams.cpp)
add_executable(423-reconstruct-original-digits-from-english leetcode/editor/cn/423-reconstruct-original-digits-from-english.cpp)
add_executable(657-robot-return-to-origin leetcode/editor/cn/657-robot-return-to-origin.cpp)
add_executable(551-student-attendance-record-i leetcode/editor/cn/551-student-attendance-record-i.cpp)
add_executable(696-count-binary-substrings leetcode/editor/cn/696-count-binary-substrings.cpp)
add_executable(467-unique-substrings-in-wraparound-string leetcode/editor/cn/467-unique-substrings-in-wraparound-string.cpp)
add_executable(535-encode-and-decode-tinyurl leetcode/editor/cn/535-encode-and-decode-tinyurl.cpp)
add_executable(299-bulls-and-cows leetcode/editor/cn/299-bulls-and-cows.cpp)
add_executable(412-fizz-buzz leetcode/editor/cn/412-fizz-buzz.cpp)
add_executable(506-relative-ranks leetcode/editor/cn/506-relative-ranks.cpp)
add_executable(539-minimum-time-difference leetcode/editor/cn/539-minimum-time-difference.cpp)
add_executable(553-optimal-division leetcode/editor/cn/553-optimal-division.cpp)
add_executable(537-complex-number-multiplication leetcode/editor/cn/537-complex-number-multiplication.cpp)
add_executable(592-fraction-addition-and-subtraction leetcode/editor/cn/592-fraction-addition-and-subtraction.cpp)