cmake_minimum_required(VERSION 3.9)
project(LeetCode)
set(CMAKE_CXX_STANDARD 11)
#把exe文件输出到bin目录，不然太多了看着麻烦
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../bin")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../bin)
#链接库
aux_source_directory(leetcode/editor/cn/include LEETCODE)
add_library(leetcode ${LEETCODE})
LINK_LIBRARIES(leetcode)


add_executable(1-two-sum leetcode/editor/cn/1-two-sum.cpp)
add_executable(100-same-tree leetcode/editor/cn/100-same-tree.cpp)
add_executable(35-search-insert-position leetcode/editor/cn/35-search-insert-position.cpp)
add_executable(074-SsGoHC "leetcode/editor/cn/074-SsGoHC.cpp")
add_executable(485-max-consecutive-ones leetcode/editor/cn/485-max-consecutive-ones.cpp)
add_executable(495-teemo-attacking leetcode/editor/cn/495-teemo-attacking.cpp)
add_executable(414-third-maximum-number leetcode/editor/cn/414-third-maximum-number.cpp)
add_executable(628-maximum-product-of-three-numbers leetcode/editor/cn/628-maximum-product-of-three-numbers.cpp)
add_executable(645-set-mismatch leetcode/editor/cn/645-set-mismatch.cpp)
add_executable(697-degree-of-an-array leetcode/editor/cn/697-degree-of-an-array.cpp)
add_executable(448-find-all-numbers-disappeared-in-an-array leetcode/editor/cn/448-find-all-numbers-disappeared-in-an-array.cpp)
add_executable(912-sort-an-array leetcode/editor/cn/912-sort-an-array.cpp)
add_executable(442-find-all-duplicates-in-an-array leetcode/editor/cn/442-find-all-duplicates-in-an-array.cpp)
add_executable(989-add-to-array-form-of-integer leetcode/editor/cn/989-add-to-array-form-of-integer.cpp)
add_executable(274-h-index leetcode/editor/cn/274-h-index.cpp)
add_executable(453-minimum-moves-to-equal-array-elements leetcode/editor/cn/453-minimum-moves-to-equal-array-elements.cpp)
add_executable(283-move-zeroes leetcode/editor/cn/283-move-zeroes.cpp)
add_executable(118-pascals-triangle leetcode/editor/cn/118-pascals-triangle.cpp)
add_executable(119-pascals-triangle-ii leetcode/editor/cn/119-pascals-triangle-ii.cpp)
add_executable(661-image-smoother leetcode/editor/cn/661-image-smoother.cpp)
add_executable(598-range-addition-ii leetcode/editor/cn/598-range-addition-ii.cpp)
add_executable(419-battleships-in-a-board leetcode/editor/cn/419-battleships-in-a-board.cpp)
add_executable(189-rotate-array leetcode/editor/cn/189-rotate-array.cpp)
add_executable(396-rotate-function leetcode/editor/cn/396-rotate-function.cpp)
add_executable(54-spiral-matrix leetcode/editor/cn/54-spiral-matrix.cpp)
add_executable(59-spiral-matrix-ii leetcode/editor/cn/59-spiral-matrix-ii.cpp)
add_executable(498-diagonal-traverse leetcode/editor/cn/498-diagonal-traverse.cpp)
add_executable(566-reshape-the-matrix leetcode/editor/cn/566-reshape-the-matrix.cpp)
add_executable(48-rotate-image leetcode/editor/cn/48-rotate-image.cpp)
add_executable(73-set-matrix-zeroes leetcode/editor/cn/73-set-matrix-zeroes.cpp)
add_executable(303-range-sum-query-immutable leetcode/editor/cn/303-range-sum-query-immutable.cpp)
add_executable(304-range-sum-query-2d-immutable leetcode/editor/cn/304-range-sum-query-2d-immutable.cpp)
add_executable(238-product-of-array-except-self leetcode/editor/cn/238-product-of-array-except-self.cpp)
add_executable(520-detect-capital leetcode/editor/cn/520-detect-capital.cpp)
add_executable(125-valid-palindrome leetcode/editor/cn/125-valid-palindrome.cpp)
add_executable(14-longest-common-prefix leetcode/editor/cn/14-longest-common-prefix.cpp)
add_executable(434-number-of-segments-in-a-string leetcode/editor/cn/434-number-of-segments-in-a-string.cpp)
add_executable(58-length-of-last-word leetcode/editor/cn/58-length-of-last-word.cpp)
add_executable(344-reverse-string leetcode/editor/cn/344-reverse-string.cpp)
add_executable(541-reverse-string-ii leetcode/editor/cn/541-reverse-string-ii.cpp)
add_executable(557-reverse-words-in-a-string-iii leetcode/editor/cn/557-reverse-words-in-a-string-iii.cpp)
add_executable(151-reverse-words-in-a-string leetcode/editor/cn/151-reverse-words-in-a-string.cpp)
add_executable(387-first-unique-character-in-a-string leetcode/editor/cn/387-first-unique-character-in-a-string.cpp)
add_executable(389-find-the-difference leetcode/editor/cn/389-find-the-difference.cpp)
add_executable(383-ransom-note leetcode/editor/cn/383-ransom-note.cpp)
add_executable(242-valid-anagram leetcode/editor/cn/242-valid-anagram.cpp)
add_executable(49-group-anagrams leetcode/editor/cn/49-group-anagrams.cpp)
add_executable(423-reconstruct-original-digits-from-english leetcode/editor/cn/423-reconstruct-original-digits-from-english.cpp)
add_executable(657-robot-return-to-origin leetcode/editor/cn/657-robot-return-to-origin.cpp)
add_executable(551-student-attendance-record-i leetcode/editor/cn/551-student-attendance-record-i.cpp)
add_executable(696-count-binary-substrings leetcode/editor/cn/696-count-binary-substrings.cpp)
add_executable(467-unique-substrings-in-wraparound-string leetcode/editor/cn/467-unique-substrings-in-wraparound-string.cpp)
add_executable(535-encode-and-decode-tinyurl leetcode/editor/cn/535-encode-and-decode-tinyurl.cpp)
add_executable(299-bulls-and-cows leetcode/editor/cn/299-bulls-and-cows.cpp)
add_executable(412-fizz-buzz leetcode/editor/cn/412-fizz-buzz.cpp)
add_executable(506-relative-ranks leetcode/editor/cn/506-relative-ranks.cpp)
add_executable(539-minimum-time-difference leetcode/editor/cn/539-minimum-time-difference.cpp)
add_executable(553-optimal-division leetcode/editor/cn/553-optimal-division.cpp)
add_executable(537-complex-number-multiplication leetcode/editor/cn/537-complex-number-multiplication.cpp)
add_executable(592-fraction-addition-and-subtraction leetcode/editor/cn/592-fraction-addition-and-subtraction.cpp)
add_executable(640-solve-the-equation leetcode/editor/cn/640-solve-the-equation.cpp)
add_executable(38-count-and-say leetcode/editor/cn/38-count-and-say.cpp)
add_executable(13-roman-to-integer leetcode/editor/cn/13-roman-to-integer.cpp)
add_executable(12-integer-to-roman leetcode/editor/cn/12-integer-to-roman.cpp)
add_executable(273-integer-to-english-words leetcode/editor/cn/273-integer-to-english-words.cpp)
add_executable(165-compare-version-numbers leetcode/editor/cn/165-compare-version-numbers.cpp)
add_executable(481-magical-string leetcode/editor/cn/481-magical-string.cpp)
add_executable(392-is-subsequence leetcode/editor/cn/392-is-subsequence.cpp)
add_executable(524-longest-word-in-dictionary-through-deleting leetcode/editor/cn/524-longest-word-in-dictionary-through-deleting.cpp)
add_executable(521-longest-uncommon-subsequence-i leetcode/editor/cn/521-longest-uncommon-subsequence-i.cpp)
add_executable(66-plus-one leetcode/editor/cn/66-plus-one.cpp)
add_executable(67-add-binary leetcode/editor/cn/67-add-binary.cpp)
add_executable(415-add-strings leetcode/editor/cn/415-add-strings.cpp)
add_executable(43-multiply-strings leetcode/editor/cn/43-multiply-strings.cpp)
add_executable(28-find-the-index-of-the-first-occurrence-in-a-string leetcode/editor/cn/28-find-the-index-of-the-first-occurrence-in-a-string.cpp)
add_executable(459-repeated-substring-pattern leetcode/editor/cn/459-repeated-substring-pattern.cpp)
add_executable(507-perfect-number leetcode/editor/cn/507-perfect-number.cpp)
add_executable(50-powx-n leetcode/editor/cn/50-powx-n.cpp)
add_executable(682-baseball-game leetcode/editor/cn/682-baseball-game.cpp)
add_executable(155-min-stack leetcode/editor/cn/155-min-stack.cpp)
add_executable(225-implement-stack-using-queues leetcode/editor/cn/225-implement-stack-using-queues.cpp)
add_executable(844-backspace-string-compare leetcode/editor/cn/844-backspace-string-compare.cpp)
add_executable(1047-remove-all-adjacent-duplicates-in-string leetcode/editor/cn/1047-remove-all-adjacent-duplicates-in-string.cpp)
add_executable(71-simplify-path leetcode/editor/cn/71-simplify-path.cpp)
add_executable(21-merge-two-sorted-lists leetcode/editor/cn/21-merge-two-sorted-lists.cpp)
add_executable(206-reverse-linked-list leetcode/editor/cn/206-reverse-linked-list.cpp)
add_executable(237-delete-node-in-a-linked-list leetcode/editor/cn/237-delete-node-in-a-linked-list.cpp)
add_executable(203-remove-linked-list-elements leetcode/editor/cn/203-remove-linked-list-elements.cpp)
add_executable(707-design-linked-list leetcode/editor/cn/707-design-linked-list.cpp)
add_executable(24-swap-nodes-in-pairs leetcode/editor/cn/24-swap-nodes-in-pairs.cpp)
add_executable(19-remove-nth-node-from-end-of-list leetcode/editor/cn/19-remove-nth-node-from-end-of-list.cpp)
add_executable(160-intersection-of-two-linked-lists leetcode/editor/cn/160-intersection-of-two-linked-lists.cpp)
add_executable(142-linked-list-cycle-ii leetcode/editor/cn/142-linked-list-cycle-ii.cpp)
add_executable(141-linked-list-cycle leetcode/editor/cn/141-linked-list-cycle.cpp)
add_executable(202-happy-number leetcode/editor/cn/202-happy-number.cpp)
add_executable(204-count-primes leetcode/editor/cn/204-count-primes.cpp)
add_executable(205-isomorphic-strings leetcode/editor/cn/205-isomorphic-strings.cpp)
add_executable(290-word-pattern leetcode/editor/cn/290-word-pattern.cpp)
add_executable(594-longest-harmonious-subsequence leetcode/editor/cn/594-longest-harmonious-subsequence.cpp)
add_executable(599-minimum-index-sum-of-two-lists leetcode/editor/cn/599-minimum-index-sum-of-two-lists.cpp)
add_executable(720-longest-word-in-dictionary leetcode/editor/cn/720-longest-word-in-dictionary.cpp)
add_executable(884-uncommon-words-from-two-sentences leetcode/editor/cn/884-uncommon-words-from-two-sentences.cpp)
add_executable(970-powerful-integers leetcode/editor/cn/970-powerful-integers.cpp)
add_executable(1207-unique-number-of-occurrences leetcode/editor/cn/1207-unique-number-of-occurrences.cpp)
add_executable(3-longest-substring-without-repeating-characters leetcode/editor/cn/3-longest-substring-without-repeating-characters.cpp)
add_executable(215-kth-largest-element-in-an-array leetcode/editor/cn/215-kth-largest-element-in-an-array.cpp)
add_executable(347-top-k-frequent-elements leetcode/editor/cn/347-top-k-frequent-elements.cpp)
add_executable(451-sort-characters-by-frequency leetcode/editor/cn/451-sort-characters-by-frequency.cpp)
add_executable(648-replace-words leetcode/editor/cn/648-replace-words.cpp)
add_executable(692-top-k-frequent-words leetcode/editor/cn/692-top-k-frequent-words.cpp)
add_executable(718-maximum-length-of-repeated-subarray leetcode/editor/cn/718-maximum-length-of-repeated-subarray.cpp)
add_executable(509-fibonacci-number leetcode/editor/cn/509-fibonacci-number.cpp)
add_executable(70-climbing-stairs leetcode/editor/cn/70-climbing-stairs.cpp)
add_executable(746-min-cost-climbing-stairs leetcode/editor/cn/746-min-cost-climbing-stairs.cpp)
add_executable(62-unique-paths leetcode/editor/cn/62-unique-paths.cpp)
add_executable(63-unique-paths-ii leetcode/editor/cn/63-unique-paths-ii.cpp)
add_executable(343-integer-break leetcode/editor/cn/343-integer-break.cpp)
add_executable(96-unique-binary-search-trees leetcode/editor/cn/96-unique-binary-search-trees.cpp)
add_executable(416-partition-equal-subset-sum leetcode/editor/cn/416-partition-equal-subset-sum.cpp)
add_executable(1049-last-stone-weight-ii leetcode/editor/cn/1049-last-stone-weight-ii.cpp)
add_executable(494-target-sum leetcode/editor/cn/494-target-sum.cpp)
add_executable(474-ones-and-zeroes leetcode/editor/cn/474-ones-and-zeroes.cpp)
add_executable(518-coin-change-ii leetcode/editor/cn/518-coin-change-ii.cpp)
add_executable(377-combination-sum-iv leetcode/editor/cn/377-combination-sum-iv.cpp)
add_executable(322-coin-change leetcode/editor/cn/322-coin-change.cpp)
add_executable(198-house-robber leetcode/editor/cn/198-house-robber.cpp)
add_executable(213-house-robber-ii leetcode/editor/cn/213-house-robber-ii.cpp)
add_executable(337-house-robber-iii leetcode/editor/cn/337-house-robber-iii.cpp)
add_executable(121-best-time-to-buy-and-sell-stock leetcode/editor/cn/121-best-time-to-buy-and-sell-stock.cpp)
add_executable(122-best-time-to-buy-and-sell-stock-ii leetcode/editor/cn/122-best-time-to-buy-and-sell-stock-ii.cpp)
add_executable(123-best-time-to-buy-and-sell-stock-iii leetcode/editor/cn/123-best-time-to-buy-and-sell-stock-iii.cpp)
add_executable(188-best-time-to-buy-and-sell-stock-iv leetcode/editor/cn/188-best-time-to-buy-and-sell-stock-iv.cpp)
add_executable(309-best-time-to-buy-and-sell-stock-with-cooldown leetcode/editor/cn/309-best-time-to-buy-and-sell-stock-with-cooldown.cpp)
add_executable(714-best-time-to-buy-and-sell-stock-with-transaction-fee leetcode/editor/cn/714-best-time-to-buy-and-sell-stock-with-transaction-fee.cpp)
add_executable(300-longest-increasing-subsequence leetcode/editor/cn/300-longest-increasing-subsequence.cpp)
add_executable(674-longest-continuous-increasing-subsequence leetcode/editor/cn/674-longest-continuous-increasing-subsequence.cpp)
add_executable(1143-longest-common-subsequence leetcode/editor/cn/1143-longest-common-subsequence.cpp)
add_executable(1035-uncrossed-lines leetcode/editor/cn/1035-uncrossed-lines.cpp)
add_executable(53-maximum-subarray leetcode/editor/cn/53-maximum-subarray.cpp)
add_executable(115-distinct-subsequences leetcode/editor/cn/115-distinct-subsequences.cpp)
add_executable(583-delete-operation-for-two-strings leetcode/editor/cn/583-delete-operation-for-two-strings.cpp)
add_executable(72-edit-distance leetcode/editor/cn/72-edit-distance.cpp)
add_executable(52-n-queens-ii leetcode/editor/cn/52-n-queens-ii.cpp)
add_executable(647-palindromic-substrings leetcode/editor/cn/647-palindromic-substrings.cpp)
add_executable(516-longest-palindromic-subsequence leetcode/editor/cn/516-longest-palindromic-subsequence.cpp)
add_executable(144-binary-tree-preorder-traversal leetcode/editor/cn/144-binary-tree-preorder-traversal.cpp)
add_executable(145-binary-tree-postorder-traversal leetcode/editor/cn/145-binary-tree-postorder-traversal.cpp)
add_executable(94-binary-tree-inorder-traversal leetcode/editor/cn/94-binary-tree-inorder-traversal.cpp)
add_executable(102-binary-tree-level-order-traversal leetcode/editor/cn/102-binary-tree-level-order-traversal.cpp)
add_executable(107-binary-tree-level-order-traversal-ii leetcode/editor/cn/107-binary-tree-level-order-traversal-ii.cpp)
add_executable(199-binary-tree-right-side-view leetcode/editor/cn/199-binary-tree-right-side-view.cpp)
add_executable(637-average-of-levels-in-binary-tree leetcode/editor/cn/637-average-of-levels-in-binary-tree.cpp)
add_executable(429-n-ary-tree-level-order-traversal leetcode/editor/cn/429-n-ary-tree-level-order-traversal.cpp)
add_executable(515-find-largest-value-in-each-tree-row leetcode/editor/cn/515-find-largest-value-in-each-tree-row.cpp)
add_executable(116-populating-next-right-pointers-in-each-node leetcode/editor/cn/116-populating-next-right-pointers-in-each-node.cpp)
add_executable(117-populating-next-right-pointers-in-each-node-ii leetcode/editor/cn/117-populating-next-right-pointers-in-each-node-ii.cpp)
add_executable(104-maximum-depth-of-binary-tree leetcode/editor/cn/104-maximum-depth-of-binary-tree.cpp)
add_executable(111-minimum-depth-of-binary-tree leetcode/editor/cn/111-minimum-depth-of-binary-tree.cpp)
add_executable(226-invert-binary-tree leetcode/editor/cn/226-invert-binary-tree.cpp)

#把exe文件输出到bin目录，不然太多了看着麻烦
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")

add_executable(101-symmetric-tree leetcode/editor/cn/101-symmetric-tree.cpp)
add_executable(559-maximum-depth-of-n-ary-tree leetcode/editor/cn/559-maximum-depth-of-n-ary-tree.cpp)
add_executable(222-count-complete-tree-nodes leetcode/editor/cn/222-count-complete-tree-nodes.cpp)
add_executable(110-balanced-binary-tree leetcode/editor/cn/110-balanced-binary-tree.cpp)
add_executable(257-binary-tree-paths leetcode/editor/cn/257-binary-tree-paths.cpp)
add_executable(404-sum-of-left-leaves leetcode/editor/cn/404-sum-of-left-leaves.cpp)
add_executable(513-find-bottom-left-tree-value leetcode/editor/cn/513-find-bottom-left-tree-value.cpp)
add_executable(236-lowest-common-ancestor-of-a-binary-tree leetcode/editor/cn/236-lowest-common-ancestor-of-a-binary-tree.cpp)
add_executable(235-lowest-common-ancestor-of-a-binary-search-tree leetcode/editor/cn/235-lowest-common-ancestor-of-a-binary-search-tree.cpp)
add_executable(701-insert-into-a-binary-search-tree leetcode/editor/cn/701-insert-into-a-binary-search-tree.cpp)
add_executable(450-delete-node-in-a-bst leetcode/editor/cn/450-delete-node-in-a-bst.cpp)
add_executable(669-trim-a-binary-search-tree leetcode/editor/cn/669-trim-a-binary-search-tree.cpp)
add_executable(108-convert-sorted-array-to-binary-search-tree leetcode/editor/cn/108-convert-sorted-array-to-binary-search-tree.cpp)
add_executable(106-construct-binary-tree-from-inorder-and-postorder-traversal leetcode/editor/cn/106-construct-binary-tree-from-inorder-and-postorder-traversal.cpp)
add_executable(105-construct-binary-tree-from-preorder-and-inorder-traversal leetcode/editor/cn/105-construct-binary-tree-from-preorder-and-inorder-traversal.cpp)
add_executable(654-maximum-binary-tree leetcode/editor/cn/654-maximum-binary-tree.cpp)
add_executable(538-convert-bst-to-greater-tree leetcode/editor/cn/538-convert-bst-to-greater-tree.cpp)
add_executable(617-merge-two-binary-trees leetcode/editor/cn/617-merge-two-binary-trees.cpp)
add_executable(700-search-in-a-binary-search-tree leetcode/editor/cn/700-search-in-a-binary-search-tree.cpp)
add_executable(98-validate-binary-search-tree leetcode/editor/cn/98-validate-binary-search-tree.cpp)
add_executable(530-minimum-absolute-difference-in-bst leetcode/editor/cn/530-minimum-absolute-difference-in-bst.cpp)
add_executable(501-find-mode-in-binary-search-tree leetcode/editor/cn/501-find-mode-in-binary-search-tree.cpp)
add_executable(704-binary-search leetcode/editor/cn/704-binary-search.cpp)
add_executable(27-remove-element leetcode/editor/cn/27-remove-element.cpp)
add_executable(26-remove-duplicates-from-sorted-array leetcode/editor/cn/26-remove-duplicates-from-sorted-array.cpp)
add_executable(977-squares-of-a-sorted-array leetcode/editor/cn/977-squares-of-a-sorted-array.cpp)
add_executable(209-minimum-size-subarray-sum leetcode/editor/cn/209-minimum-size-subarray-sum.cpp)
add_executable(349-intersection-of-two-arrays leetcode/editor/cn/349-intersection-of-two-arrays.cpp)
add_executable(454-4sum-ii leetcode/editor/cn/454-4sum-ii.cpp)
add_executable(15-3sum leetcode/editor/cn/15-3sum.cpp)
add_executable(18-4sum leetcode/editor/cn/18-4sum.cpp)
add_executable(455-assign-cookies leetcode/editor/cn/455-assign-cookies.cpp)
add_executable(376-wiggle-subsequence leetcode/editor/cn/376-wiggle-subsequence.cpp)
add_executable(55-jump-game leetcode/editor/cn/55-jump-game.cpp)
add_executable(45-jump-game-ii leetcode/editor/cn/45-jump-game-ii.cpp)
add_executable(1005-maximize-sum-of-array-after-k-negations leetcode/editor/cn/1005-maximize-sum-of-array-after-k-negations.cpp)
add_executable(134-gas-station leetcode/editor/cn/134-gas-station.cpp)
add_executable(135-candy leetcode/editor/cn/135-candy.cpp)
add_executable(860-lemonade-change leetcode/editor/cn/860-lemonade-change.cpp)
add_executable(406-queue-reconstruction-by-height leetcode/editor/cn/406-queue-reconstruction-by-height.cpp)
add_executable(452-minimum-number-of-arrows-to-burst-balloons leetcode/editor/cn/452-minimum-number-of-arrows-to-burst-balloons.cpp)
add_executable(435-non-overlapping-intervals leetcode/editor/cn/435-non-overlapping-intervals.cpp)
add_executable(763-partition-labels leetcode/editor/cn/763-partition-labels.cpp)
add_executable(56-merge-intervals leetcode/editor/cn/56-merge-intervals.cpp)
add_executable(738-monotone-increasing-digits leetcode/editor/cn/738-monotone-increasing-digits.cpp)
add_executable(968-binary-tree-cameras leetcode/editor/cn/968-binary-tree-cameras.cpp)
add_executable(77-combinations leetcode/editor/cn/77-combinations.cpp)
add_executable(216-combination-sum-iii leetcode/editor/cn/216-combination-sum-iii.cpp)
add_executable(17-letter-combinations-of-a-phone-number leetcode/editor/cn/17-letter-combinations-of-a-phone-number.cpp)
add_executable(39-combination-sum leetcode/editor/cn/39-combination-sum.cpp)
add_executable(40-combination-sum-ii leetcode/editor/cn/40-combination-sum-ii.cpp)
add_executable(131-palindrome-partitioning leetcode/editor/cn/131-palindrome-partitioning.cpp)
add_executable(93-restore-ip-addresses leetcode/editor/cn/93-restore-ip-addresses.cpp)
add_executable(78-subsets leetcode/editor/cn/78-subsets.cpp)
add_executable(90-subsets-ii leetcode/editor/cn/90-subsets-ii.cpp)
add_executable(491-non-decreasing-subsequences leetcode/editor/cn/491-non-decreasing-subsequences.cpp)
add_executable(46-permutations leetcode/editor/cn/46-permutations.cpp)
add_executable(47-permutations-ii leetcode/editor/cn/47-permutations-ii.cpp)
add_executable(332-reconstruct-itinerary leetcode/editor/cn/332-reconstruct-itinerary.cpp)
add_executable(51-n-queens leetcode/editor/cn/51-n-queens.cpp)
add_executable(37-sudoku-solver leetcode/editor/cn/37-sudoku-solver.cpp)
add_executable(739-daily-temperatures leetcode/editor/cn/739-daily-temperatures.cpp)
add_executable(496-next-greater-element-i leetcode/editor/cn/496-next-greater-element-i.cpp)
add_executable(503-next-greater-element-ii leetcode/editor/cn/503-next-greater-element-ii.cpp)
add_executable(42-trapping-rain-water leetcode/editor/cn/42-trapping-rain-water.cpp)
add_executable(232-implement-queue-using-stacks leetcode/editor/cn/232-implement-queue-using-stacks.cpp)
add_executable(20-valid-parentheses leetcode/editor/cn/20-valid-parentheses.cpp)
add_executable(150-evaluate-reverse-polish-notation leetcode/editor/cn/150-evaluate-reverse-polish-notation.cpp)
add_executable(239-sliding-window-maximum leetcode/editor/cn/239-sliding-window-maximum.cpp)
add_executable(34-find-first-and-last-position-of-element-in-sorted-array leetcode/editor/cn/34-find-first-and-last-position-of-element-in-sorted-array.cpp)
add_executable(69-sqrtx leetcode/editor/cn/69-sqrtx.cpp)
add_executable(367-valid-perfect-square leetcode/editor/cn/367-valid-perfect-square.cpp)
add_executable(904-fruit-into-baskets leetcode/editor/cn/904-fruit-into-baskets.cpp)
add_executable(LCP 68-1GxJYY "leetcode/editor/cn/LCP 68-1GxJYY.cpp")
add_executable(76-minimum-window-substring leetcode/editor/cn/76-minimum-window-substring.cpp)